comment section added

--- a/template/app_buddy/my_posts.html
+++ b/template/app_buddy/my_posts.html
@@ -29,6 +29,7 @@
                 <p><em>{{i.post}}</em></p>
                 {% endfor %}
             </div>
+            <a href="{% url 'reply' j.id %}">Reply</a></p> 
           </div>
       </div>
   </div>
