--- a/template/app_buddy/my_posts.html
+++ b/template/app_buddy/my_posts.html
@@ -15,22 +15,25 @@
       <div class="row">            
           <div class="col-4 border">
               <ul>
-                  <li><a href="{% url 'home' %}">Home</a></li>
-                  <li>My Friends</li>
-                  <li>My Photos</li>
-                  <li>Basic Information</li>
-                  <li>Settings</li>
+                <li><a href="{% url 'home' %}">Home</a></li>
+                <li><a href="{% url 'friend_request' %}">Friend Requests</a></li>
+                <li><a href="{% url 'friend_list' %}">My Friends</a></li>
+                <li>My Photos</li>
+                <li><a href="{% url 'about_me' %}">About Me</a></li>
+                <li>Settings</li>
               </ul>
           </div>
           <div class="col-8 border">
             <div>
                 {% for i in see %}
-                <b>{{i.title}}</b><img src="{{i.image.url}}" alt="" height="300" width="400">
+                <p><b>{{i.title}}</b></p>
+                <p><img src="{{i.image.url}}" alt="" height="300" width="400"></p>
                 <p><em>{{i.post}}</em></p>
+                <p> <a href="{% url 'reply' i.id %}">Reply</a></p>
                 {% for k in comment %}  
                 {% if i.id == k.post_id_id %}         
-                <p><b style="color: blue;">{{k.user_id.user_name}} :</b><em style="color: rgb(12, 12, 12);" class="form-control">{{k.comment}}<a href="{% url 'reply' k.id %}">Reply</a></em></p>
-                
+                <p><b style="color: blue;">{{k.user_id.user_name}} :</b><em style="color: rgb(12, 12, 12);" class="form-control">{{k.comment}}</em></p>
+                                  
                 {% endif %}
                 {% endfor %}
                 {% endfor %}
