--- a/template/app_buddy/my_wall.html
+++ b/template/app_buddy/my_wall.html
@@ -27,7 +27,7 @@
                     <li><a href="{% url 'my_post' %}">My Posts</a></li>
                     <li><a href="{% url 'friend_request' %}">Friend Requests</a></li>
                     <li><a href="{% url 'friend_list' %}">My Friends</a></li>
-                    <li>My Photos</li>
+                    <li><a href="{% url 'my_photos' %}">My Photos</a></li>
                     <li><a href="{% url 'about_me' %}">About Me</a></li>
                     <li>Settings</li>
                 </ul>
@@ -53,7 +53,7 @@
                     <p><a href="{% url 'comment' j.id %}">Comment</a>&nbsp;&nbsp;&nbsp;</p>
                       {% for k in comment %}  
                       {% if j.id == k.post_id_id %}         
-                    <p><b style="color: blue;">{{k.user_id.user_name}} :</b><em style="color: rgb(12, 12, 12);" class="form-control">{{k.comment}}</em></p>
+                    <p><b style="color: blue;"><img src="{{k.user_id.photo.url}}" height="30px" width="30px" alt="">{{k.user_id.user_name}} :</b><em style="color: rgb(12, 12, 12);" class="form-control">{{k.comment}}</em></p>
                       {% endif %}
                       {% endfor %}
                     {% endif %}
