--- a/template/app_buddy/reply.html
+++ b/template/app_buddy/reply.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Comment</title>
+  <title>Reply</title>
   <link rel="stylesheet" href="/static/bootstrap-5.3.2-dist/css/bootstrap.css">
   <script src="/static/bootstrap-5.3.2-dist/js/bootstrap.js"></script>
 </head>
@@ -23,38 +23,7 @@
                   <li>Settings</li>
               </ul>
           </div>
-          <div class="col-9 border">
-                <div class="col-6">
-                    {% for i in key %}
-                     <table>
-                        <tr>
-                            <th>Name</th>
-                            <td class="form-control"><div class="col-2">                                
-                                <img src="{{i.request_from.photo.url}}" alt="No picture" height="100px" width="100px">                              
-                            </div>{{i.request_from.first_name}}&nbsp;{{i.request_from.last_name}}</td>                        
-                        </tr>
-                        <tr>                            
-                           <td><input type="hidden" name="friend_id" value="{{i.request_from.id}}"></td>                          
-                        </tr>
-                        <tr>
-                            <th>Gender</th>
-                            <td class="form-control">{{i.request_from.gender}}</td>                                  
-                        </tr>
-                        <tr>
-                            <th>Address</th>
-                            <td class="form-control">{{i.request_from.address}}</td>
-                        </tr>
-                        <tr>
-                            <th></th>
-                            <td><a href="{% url 'unfriend' i.id %}">Unfriend</a></td>
-                        </tr>
-                     </table>                                  
-                    {% endfor %}  
-                                      
-                </div>  
-                               
-            </div>
-                   
+             
       </div>
       
   </div>
