--- a/template/app_buddy/friend_list.html
+++ b/template/app_buddy/friend_list.html
@@ -15,11 +15,12 @@
       <div class="row">            
           <div class="col-3 border">
               <ul>
-                  <li><a href="{% url 'home' %}">Home</a></li>
-                  <li>My Friends</li>
-                  <li>My Photos</li>
-                  <li><a href="{% url 'about_me' %}">About Me</a></li>
-                  <li>Settings</li>
+                <li><a href="{% url 'home' %}">Home</a></li>
+                <li><a href="{% url 'friend_request' %}">Friend Requests</a></li>
+                <li>My Friends</li>
+                <li><a href="{% url 'my_post' %}">My Posts</a></li>
+                <li><a href="{% url 'about_me' %}">About Me</a></li>
+                <li>Settings</li>
               </ul>
           </div>
           <div class="col-9 border">
