--- a/template/app_buddy/buddies.html
+++ b/template/app_buddy/buddies.html
@@ -16,9 +16,11 @@
           <div class="col-4 border">
               <ul>
                   <li><a href="{% url 'home' %}">Home</a></li>
-                  <li>My Friends</li>
-                  <li>My Photos</li>
-                  <li>Basic Information</li>
+                  <li><a href="{% url 'my_post' %}">My Posts</a></li>
+                  <li><a href="{% url 'friend_request' %}">Friend Requests</a></li>
+                  <li><a href="{% url 'friend_list' %}">My Friends</a></li>
+                  <li><a href="{% url 'my_photos' %}">My Photos</a></li>
+                  <li><a href="{% url 'about_me' %}">About Me</a></li>
                   <li>Settings</li>
               </ul>
           </div>
