--- a/template/app_buddy/my_photos.html
+++ b/template/app_buddy/my_photos.html
@@ -24,10 +24,10 @@
                 {% endfor %}
                 <br>
                 <ul>
-                    <li><a href="{% url 'my_post' %}">My Posts</a></li>
+                    <li><a href="{% url 'home' %}">Home</a></li>
                     <li><a href="{% url 'friend_request' %}">Friend Requests</a></li>
                     <li><a href="{% url 'friend_list' %}">My Friends</a></li>
-                    <li><a href="{% url 'my_photos' %}">My Photos</a></li>
+                    <li><a href="{% url 'my_post' %}">My Posts</a></li>
                     <li><a href="{% url 'about_me' %}">About Me</a></li>
                     <li>Settings</li>
                 </ul>                
