--- a/template/app_buddy/my_posts.html
+++ b/template/app_buddy/my_posts.html
@@ -18,7 +18,7 @@
                 <li><a href="{% url 'home' %}">Home</a></li>
                 <li><a href="{% url 'friend_request' %}">Friend Requests</a></li>
                 <li><a href="{% url 'friend_list' %}">My Friends</a></li>
-                <li>My Photos</li>
+                <li><a href="{% url 'my_photos' %}">My Photos</a></li>
                 <li><a href="{% url 'about_me' %}">About Me</a></li>
                 <li>Settings</li>
               </ul>
@@ -29,10 +29,10 @@
                 <p><b>{{i.title}}</b></p>
                 <p><img src="{{i.image.url}}" alt="" height="300" width="400"></p>
                 <p><em>{{i.post}}</em></p>
-                <p> <a href="{% url 'reply' i.id %}">Reply</a></p>
+                <p> <a href="{% url 'reply' i.id %}">Reply</a>&nbsp;&nbsp;<a href="{% url 'delete_post' i.id %}" class="text-danger">Delete Post</a></p>
                 {% for k in comment %}  
                 {% if i.id == k.post_id_id %}         
-                <p><b style="color: blue;">{{k.user_id.user_name}} :</b><em style="color: rgb(12, 12, 12);" class="form-control">{{k.comment}}</em></p>
+                <p class="col-8"><b style="color: blue;">{{k.user_id.user_name}} :</b><em style="color: rgb(12, 12, 12);" class="form-control">{{k.comment}}</em></p>
                                   
                 {% endif %}
                 {% endfor %}
