--- a/template/app_buddy/my_wall.html
+++ b/template/app_buddy/my_wall.html
@@ -53,7 +53,7 @@
                     <p><a href="{% url 'comment' j.id %}">Comment</a>&nbsp;&nbsp;&nbsp;</p>
                       {% for k in comment %}  
                       {% if j.id == k.post_id_id %}         
-                    <p><b style="color: blue;"><img src="{{k.user_id.photo.url}}" height="30px" width="30px" alt="">{{k.user_id.user_name}} :</b><em style="color: rgb(12, 12, 12);" class="form-control">{{k.comment}}</em></p>
+                    <p class="col-8"><b style="color: blue;"><img src="{{k.user_id.photo.url}}" height="30px" width="30px" alt="">{{k.user_id.user_name}} :</b><em style="color: rgb(12, 12, 12);" class="form-control">{{k.comment}}</em></p>
                       {% endif %}
                       {% endfor %}
                     {% endif %}
