--- a/template/app_buddy/reply.html
+++ b/template/app_buddy/reply.html
@@ -18,7 +18,7 @@
                   <li><a href="{% url 'home' %}">Home</a></li>
                   <li><a href="{% url 'friend_request' %}">Friend Requests</a></li>
                   <li><a href="{% url 'friend_list' %}">My Friends</a></li>
-                  <li>My Photos</li>
+                  <li><a href="{% url 'my_photos' %}">My Photos</a></li>
                   <li><a href="{% url 'about_me' %}">About Me</a></li>
                   <li>Settings</li>
               </ul>
