--- a/template/app_buddy/my_wall.html
+++ b/template/app_buddy/my_wall.html
@@ -29,7 +29,7 @@
                     <li><a href="{% url 'friend_list' %}">My Friends</a></li>
                     <li><a href="{% url 'my_photos' %}">My Photos</a></li>
                     <li><a href="{% url 'about_me' %}">About Me</a></li>
-                    <li>Settings</li>
+                    <li><a href="{% url 'settings' %}">Settings</a></li>
                 </ul>
                 
             </div>
@@ -50,7 +50,7 @@
                     <p><b>{{j.title}}</b></p>
                     <p><img src="{{j.image.url}}" alt="" height="300" width="450"></p>
                     <p><em>{{j.post}}</em></p>
-                    <p><a href="{% url 'comment' j.id %}">Comment</a>&nbsp;&nbsp;&nbsp;</p>
+                    <p><a href="{% url 'likes' j.id %}"><img src="/media/like_button.png" alt="" height="20px" width="25px"></a><b style="color: blue;">{% for x in lk %} {% if x.post_id_id == j.id %}  {{x.like_count}} {% endif %} {% endfor %} &nbsp;</b>likes&nbsp;&nbsp;&nbsp;<a href="{% url 'comment' j.id %}">Comment</a></p>
                       {% for k in comment %}  
                       {% if j.id == k.post_id_id %}         
                     <p class="col-8"><b style="color: blue;"><img src="{{k.user_id.photo.url}}" height="30px" width="30px" alt="">{{k.user_id.user_name}} :</b><em style="color: rgb(12, 12, 12);" class="form-control">{{k.comment}}</em></p>
