--- a/template/app_buddy/notifications.html
+++ b/template/app_buddy/notifications.html
@@ -24,20 +24,22 @@
               </ul>
           </div>
           <div class="col-8 border">
-            <div>
+            <div> 
+              <h5 style="background-color: rgb(242, 39, 39); color: white; text-align: center;">Notifications</h5> 
+                <ul>  
+                  {% if ntfy == null %}
+                   <li><b>{{show}}</b></li>
+                  {% else %}
+                    {% for i in ntfy %} 
+                      {% if i.like == 'liked' %} 
+                  <li><b>{{i.user_id.user_name}}</b><em>&nbsp;&nbsp;liked your post</em></li>
+                      {% elif i.comment == 'commented' %}
+                  <li><b>{{i.user_id.user_name}}</b><em>&nbsp;&nbsp;has commented below your post</em></li>
+                      {% endif %}  
+                    {% endfor %}
+                  {% endif %}
+                </ul>                                  
                 
-                {% for i in see %}
-                <p><b style="color: blue;">Me :</b>&nbsp;&nbsp;<b>{{i.title}}</b></p>
-                <p><img src="{{i.image.url}}" alt="" height="300" width="400"></p>
-                <p><em>{{i.post}}</em></p>    
-                <p><a href="{% url 'likes' i.id %}"><img src="/media/like.png" alt="" height="25px" width="25px"></a><b style="color: blue;">{{i.likes}}&nbsp;</b>likes<a href="{% url 'likers' i.id %}">&nbsp;&nbsp;Liked by</a> &nbsp;&nbsp;<a href="{% url 'reply' i.id %}">Reply</a>&nbsp;&nbsp;<a href="{% url 'delete_post' i.id %}" class="text-danger">Delete Post</a></p>
-                <p><a href="{% url 'notifications' i.id %}">Notifications</a></p>
-                {% for k in comment %}  
-                {% if i.id == k.post_id_id %}         
-                <p class="col-8"><b style="color: blue;"><img src="{{k.user_id.photo.url}}" height="30px" width="30px" alt="">{{k.user_id.user_name}} :</b><em style="color: rgb(12, 12, 12);" class="form-control">{{k.comment}}</em></p>                                  
-                {% endif %}
-                {% endfor %}
-                {% endfor %}
             </div>
            
           </div>
