--- a/template/app_buddy/about_me.html
+++ b/template/app_buddy/about_me.html
@@ -20,8 +20,8 @@
                 <li><a href="{% url 'friend_request' %}">Friend Requests</a></li>
                 <li><a href="{% url 'friend_list' %}">My Friends</a></li>
                 <li><a href="{% url 'my_photos' %}">My Photos</a></li>
-                  <li>About Me</li>
-                  <li>Settings</li>
+                <li>About Me</li>
+                <li><a href="{% url 'settings' %}">Settings</a></li>
               </ul>
           </div>
           
@@ -32,7 +32,8 @@
                 <img src="{{i.photo.url}}" alt="" height="200px" width="200px">
             </div>
                 <div class="col-6">
-                     <input type="text" name="name" value="{{i.first_name}}"value=" {{i.last_name}}" class="form-control"> 
+                     <input type="text" name="name" value="{{i.first_name}}" class="form-control"> 
+                     <input type="text" name="last_name" value=" {{i.last_name}}" class="form-control">
                      <input type="text" name="gender" value="{{i.gender}}" class="form-control">
                      <input type="text" name="dob" class="form-control" value="{{i.dob}}">    
                      <input type="text" name="email" class="form-control" value="{{i.email}}">                                 
