--- a/template/app_buddy/edit_comment.html
+++ b/template/app_buddy/edit_comment.html
@@ -20,7 +20,7 @@
                 <li><a href="{% url 'friend_list' %}">My Friends</a></li>
                 <li><a href="{% url 'my_photos' %}">My Photos</a></li>
                 <li><a href="{% url 'about_me' %}">About Me</a></li>
-                <li>Settings</li>
+                <li><a href="{% url 'settings' %}">Settings</a></li>
               </ul>
           </div>
           <div class="col-8 border pt-3">
