--- a/template/app_buddy/my_wall.html
+++ b/template/app_buddy/my_wall.html
@@ -28,8 +28,9 @@
                     <li><a href="{% url 'friend_request' %}">Friend Requests</a></li>
                     <li><a href="{% url 'friend_list' %}">My Friends</a></li>
                     <li><a href="{% url 'my_photos' %}">My Photos</a></li>
-                    <li><a href="{% url 'about_me' %}">About Me</a></li>
+                    <li><a href="{% url 'about_me' %}">About Me</a></li>                    
                     <li><a href="{% url 'settings' %}">Settings</a></li>
+                    <li><a href="{% url 'notifications' %}">Notifications</a></li>
                 </ul>
                 
             </div>
