--- a/template/app_buddy/notifications.html
+++ b/template/app_buddy/notifications.html
@@ -20,25 +20,26 @@
                 <li><a href="{% url 'friend_list' %}">My Friends</a></li>
                 <li><a href="{% url 'my_photos' %}">My Photos</a></li>
                 <li><a href="{% url 'about_me' %}">About Me</a></li>
-                <li>Settings</li>
+                <li><a href="{% url 'settings' %}">Settings</a></li>
               </ul>
           </div>
           <div class="col-8 border">
             <div> 
               <h5 style="background-color: rgb(242, 39, 39); color: white; text-align: center;">Notifications</h5> 
-                <ul>  
-                  {% if ntfy == null %}
-                   <li><b>{{show}}</b></li>
-                  {% else %}
-                    {% for i in ntfy %} 
-                      {% if i.like == 'liked' %} 
-                  <li><b>{{i.user_id.user_name}}</b><em>&nbsp;&nbsp;liked your post</em></li>
-                      {% elif i.comment == 'commented' %}
-                  <li><b>{{i.user_id.user_name}}</b><em>&nbsp;&nbsp;has commented below your post</em></li>
-                      {% endif %}  
-                    {% endfor %}
-                  {% endif %}
-                </ul>                                  
+                <ol>  
+                  {% for i in ntfy %}
+                      {% if i.post_id.user_id.user_name == key %} 
+                  
+                      {% if i.like == 'liked' and i.remarks == 'unseen'  %}                      
+                  <li><b class="text-primary">{{i.user_id.user_name}}&nbsp;&nbsp;</b><em>likes your post&nbsp;&nbsp;</em><b>{{i.post_id.title}}</b>&nbsp;&nbsp;<a href="{% url 'view_notification' i.post_id_id %}">See</a></li>
+                      
+                      {% elif i.comment == 'commented' and i.remarks == 'unseen'  %}                      
+                  <li><b class="text-primary">{{i.user_id.user_name}}&nbsp;&nbsp;</b><em>commented on your post&nbsp;&nbsp;</em><b>{{i.post_id.title}}</b>&nbsp;&nbsp;<a href="{% url 'view_notification' i.post_id_id %}">See</a></li>
+                      {% endif %}
+
+                      {% endif %}
+                  {% endfor %}
+                </ol>                                  
                 
             </div>
            
