--- a/template/app_buddy/my_posts.html
+++ b/template/app_buddy/my_posts.html
@@ -1,34 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Posts</title>
-  <link rel="stylesheet" href="/static/bootstrap-5.3.2-dist/css/bootstrap.css">
-  <script src="/static/bootstrap-5.3.2-dist/js/bootstrap.js"></script>
-</head>
-<body style="background-color:rgb(241, 244, 246);">
-  <div class="container bg-white">
-      <div class="navbar navbar-expand-lg bg-primary">
-          <img src="/media/buddy_book_Logo.png" alt="" height="100" width="100" class="bg-white"><h5 style="color:white;">buddybook</h5>&nbsp;&nbsp;&nbsp;&nbsp;<h6 class="align-content-end"><em>Logged In User : </em><b class="text-white">{{key}}</b></h6><h6>&nbsp;&nbsp;&nbsp;&nbsp;<a href="{% url 'log_out' %}" class="text-white">Sign Out?</a></h6>
-      </div>
-      <div class="row">            
-          <div class="col-3 border">
-              <ul>
-                <li><a href="{% url 'home' %}">Home</a></li>
-                <li><a href="{% url 'friend_request' %}">Friend Requests</a></li>
-                <li><a href="{% url 'friend_list' %}">My Friends</a></li>
-                <li><a href="{% url 'my_photos' %}">My Photos</a></li>
-                <li><a href="{% url 'about_me' %}">About Me</a></li>
-                <li>Settings</li>
-              </ul>
-          </div>
-          <div class="col-9 border">
+{% extends 'base.html' %}
+{% block title %} My Posts {% endblock %}
+{% block content %}
+          <div class="content">
             <div>
                 
                 {% for i in see %}
                 <p><b style="color: blue;">Me :</b>&nbsp;&nbsp;<b>{{i.title}}</b></p>
-                <p><img src="{{i.image.url}}" alt="" height="300" width="400"></p>
+                <p><img src="{{i.image.url}}" alt="" height="600" width="720" style="border-radius: 15px;"></p>
                 <p><em>{{i.post}}</em></p>    
                 <p><a href="{% url 'likes' i.id %}"><img src="/media/like.png" alt="" height="25px" width="25px"></a><b style="color: blue;">{{i.likes}}&nbsp;</b>likes<a href="{% url 'likers' i.id %}">&nbsp;&nbsp;Liked by</a> &nbsp;&nbsp;<a href="{% url 'reply' i.id %}">Reply</a>&nbsp;&nbsp;<a href="{% url 'delete_post' i.id %}" class="text-danger">Delete Post</a></p>                
                 {% for k in comment %}  
@@ -39,12 +17,7 @@
                 {% endfor %}
             </div>
           </div>
-          <div>
-            
-          </div>
-           
-      </div>
-  </div>
+          
   {% if messages  %}
           {% for msg in messages %}
           <script>
@@ -52,5 +25,4 @@
           </script>
           {% endfor %}
           {% endif %}
-</body>
-</html>
+{% endblock %}
